--- a/ExpertOrderManagement/ExpertOrderManagement/ExpertOrderManagement.csproj
+++ b/ExpertOrderManagement/ExpertOrderManagement/ExpertOrderManagement.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
+    <Compile Include="Controllers\ProductGroupController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
