Added ProductGroup table and its related pages Only view functionality is done in this commit.

--- a/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
+++ b/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
@@ -50,15 +50,19 @@
     <Compile Include="Managers\Implementations\Helper.cs" />
     <Compile Include="Managers\Implementations\IRepo.cs" />
     <Compile Include="Managers\Implementations\ManagerFactory.cs" />
+    <Compile Include="Managers\Implementations\ProductGroupHelper.cs" />
+    <Compile Include="Managers\Implementations\ProductGroupManager.cs" />
     <Compile Include="Managers\Implementations\UserHelper.cs" />
     <Compile Include="Managers\Implementations\UserManager.cs" />
     <Compile Include="Managers\Skeleton\IManagerFactory.cs" />
     <Compile Include="Managers\Skeleton\IHelper.cs" />
     <Compile Include="Managers\Skeleton\IProductGroupHelper.cs" />
+    <Compile Include="Managers\Skeleton\IProductGroupManager.cs" />
     <Compile Include="Managers\Skeleton\IUserHelper.cs" />
     <Compile Include="Managers\Skeleton\IUserManager.cs" />
     <Compile Include="Managers\Skeleton\Repo.cs" />
-    <Compile Include="OM\Client.cs" />
+    <Compile Include="OM\User.cs" />
+    <Compile Include="OM\ProductGroup.cs" />
     <Compile Include="OM\ResponseMsg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringCipher.cs" />
