--- a/ExpertOrderManagement/OrderAdminPanel/Web.config
+++ b/ExpertOrderManagement/OrderAdminPanel/Web.config
@@ -12,6 +12,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="PdfReportLocation" value="~/Content/PdfReports"/>
+    <add key="DBPath" value="data source=208.91.198.59;initial catalog=TestExpertMobile;persist security info=True;user id=mehul;password=mitesh@8277_;MultipleActiveResultSets=True;"/>
   </appSettings>
 
   <system.web>
