--- a/ExpertOrderManagement/OrderAdminPanel/Web.config
+++ b/ExpertOrderManagement/OrderAdminPanel/Web.config
@@ -12,7 +12,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="PdfReportLocation" value="~/Content/PdfReports"/>
-    <add key="DBPath" value="data source=208.91.198.59;initial catalog=TestExpertMobile;persist security info=True;user id=mehul;password=mitesh@8277_;MultipleActiveResultSets=True;"/>
+    <add key="DBPath" value="data source=DESKTOP-GS5OJK2\SQLEXPRESS;initial catalog=ExpertMobile21012017;persist security info=True;user id=sa;password=mitesh8277;MultipleActiveResultSets=True;"/>
   </appSettings>
 
   <system.web>
