--- a/ExpertOrderManagement/ExpertOrderManagement/ExpertOrderManagement.csproj
+++ b/ExpertOrderManagement/ExpertOrderManagement/ExpertOrderManagement.csproj
@@ -448,6 +448,9 @@
   <ItemGroup>
     <Content Include="Views\ProductGroup\Add.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ProductGroup\GetAll.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
