Restructured CommonLibrary Project so that all Projects can use it. Added few more updates related to Product page designs

--- a/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
+++ b/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Managers\Skeleton\IUserHelper.cs" />
     <Compile Include="Managers\Skeleton\IUserManager.cs" />
     <Compile Include="Managers\Skeleton\Repo.cs" />
+    <Compile Include="OM\Client.cs" />
+    <Compile Include="OM\ClientCompany.cs" />
     <Compile Include="OM\Product.cs" />
     <Compile Include="OM\User.cs" />
     <Compile Include="OM\ProductGroup.cs" />
