--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/ExpertDistributorApp.csproj
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/ExpertDistributorApp.csproj
@@ -119,7 +119,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\AuthorizeWebFormAttribute.cs" />
     <Compile Include="Helpers\ValidateOnlyIncomingValuesAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -331,6 +330,10 @@
     <Content Include="Scripts\jquery-1.9.0.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\CommonLibraries\CommonLibraries.csproj">
+      <Project>{b4022dc5-28ff-4fe3-9da8-8d5a562220b1}</Project>
+      <Name>CommonLibraries</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Distributor.BusinessLogic\Distributor.BusinessLogic.csproj">
       <Project>{f2b059d6-9e27-4580-8486-f19dbaaa8eba}</Project>
       <Name>Distributor.BusinessLogic</Name>
