Refactored code and made Distributor App in working mode Also added more functionality to ordermanagement related to Product CRUD oeprations

--- a/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
+++ b/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Managers\Implementations\ProductManager.cs" />
     <Compile Include="Managers\Implementations\UserHelper.cs" />
     <Compile Include="Managers\Implementations\UserManager.cs" />
+    <Compile Include="Managers\Skeleton\IGenericCRUD.cs" />
     <Compile Include="Managers\Skeleton\IManagerFactory.cs" />
     <Compile Include="Managers\Skeleton\IHelper.cs" />
     <Compile Include="Managers\Skeleton\IProductGroupHelper.cs" />
