--- a/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
+++ b/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
@@ -48,8 +48,12 @@
     <Compile Include="ExceptionLogic.cs" />
     <Compile Include="ExceptionParameters.cs" />
     <Compile Include="GenericExtensions.cs" />
+    <Compile Include="Managers\Implementations\ClientHelper.cs" />
     <Compile Include="Managers\Implementations\Helper.cs" />
-    <Compile Include="Managers\Implementations\IRepo.cs" />
+    <Compile Include="Managers\Implementations\Helpers.cs" />
+    <Compile Include="Managers\Skeleton\IClientHelper.cs" />
+    <Compile Include="Managers\Skeleton\IRepo.cs" />
+    <Compile Include="Managers\Skeleton\IUserTypeHelper.cs" />
     <Compile Include="Managers\Implementations\ManagerFactory.cs" />
     <Compile Include="Managers\Implementations\ProductGroupHelper.cs" />
     <Compile Include="Managers\Implementations\ProductGroupManager.cs" />
@@ -57,6 +61,7 @@
     <Compile Include="Managers\Implementations\ProductManager.cs" />
     <Compile Include="Managers\Implementations\UserHelper.cs" />
     <Compile Include="Managers\Implementations\UserManager.cs" />
+    <Compile Include="Managers\Implementations\UserTypeHelper.cs" />
     <Compile Include="Managers\Skeleton\IGenericCRUD.cs" />
     <Compile Include="Managers\Skeleton\IManagerFactory.cs" />
     <Compile Include="Managers\Skeleton\IHelper.cs" />
@@ -70,9 +75,10 @@
     <Compile Include="OM\Client.cs" />
     <Compile Include="OM\ClientCompany.cs" />
     <Compile Include="OM\Product.cs" />
-    <Compile Include="OM\User.cs" />
+    <Compile Include="OM\ClientUser.cs" />
     <Compile Include="OM\ProductGroup.cs" />
     <Compile Include="OM\ResponseMsg.cs" />
+    <Compile Include="OM\UserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringCipher.cs" />
   </ItemGroup>
