--- a/ExpertOrderManagement/ExpertOrderManagement/ExpertOrderManagement.csproj
+++ b/ExpertOrderManagement/ExpertOrderManagement/ExpertOrderManagement.csproj
@@ -129,6 +129,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\ProductGroupController.cs" />
@@ -460,6 +461,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\OrderManagement.pubxml" />
+    <Content Include="Views\Client\Add.cshtml" />
+    <Content Include="Views\Client\GetAll.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
