Added Company CRUD operation in working format

--- a/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
+++ b/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
@@ -48,30 +48,32 @@
     <Compile Include="ExceptionLogic.cs" />
     <Compile Include="ExceptionParameters.cs" />
     <Compile Include="GenericExtensions.cs" />
-    <Compile Include="Managers\Implementations\ClientHelper.cs" />
-    <Compile Include="Managers\Implementations\Helper.cs" />
+    <Compile Include="Managers\Implementations\Helpers\HelperFactory.cs" />
+    <Compile Include="Managers\Implementations\Helpers\ClientHelper.cs" />
+    <Compile Include="Managers\Implementations\Helpers\Helper.cs" />
     <Compile Include="Managers\Implementations\Helpers.cs" />
-    <Compile Include="Managers\Skeleton\IClientHelper.cs" />
-    <Compile Include="Managers\Skeleton\IRepo.cs" />
-    <Compile Include="Managers\Skeleton\IUserTypeHelper.cs" />
-    <Compile Include="Managers\Implementations\ManagerFactory.cs" />
-    <Compile Include="Managers\Implementations\ProductGroupHelper.cs" />
-    <Compile Include="Managers\Implementations\ProductGroupManager.cs" />
-    <Compile Include="Managers\Implementations\ProductHelper.cs" />
-    <Compile Include="Managers\Implementations\ProductManager.cs" />
-    <Compile Include="Managers\Implementations\UserHelper.cs" />
-    <Compile Include="Managers\Implementations\UserManager.cs" />
-    <Compile Include="Managers\Implementations\UserTypeHelper.cs" />
-    <Compile Include="Managers\Skeleton\IGenericCRUD.cs" />
-    <Compile Include="Managers\Skeleton\IManagerFactory.cs" />
-    <Compile Include="Managers\Skeleton\IHelper.cs" />
-    <Compile Include="Managers\Skeleton\IProductGroupHelper.cs" />
-    <Compile Include="Managers\Skeleton\IProductGroupManager.cs" />
-    <Compile Include="Managers\Skeleton\IProductHelper.cs" />
-    <Compile Include="Managers\Skeleton\IProductManager.cs" />
-    <Compile Include="Managers\Skeleton\IUserHelper.cs" />
-    <Compile Include="Managers\Skeleton\IUserManager.cs" />
-    <Compile Include="Managers\Skeleton\Repo.cs" />
+    <Compile Include="Managers\Implementations\Managers\ClientManager.cs" />
+    <Compile Include="Managers\Skeleton\Helpers\IClientHelper.cs" />
+    <Compile Include="Managers\Skeleton\Helpers\IHelperFactory.cs" />
+    <Compile Include="Managers\Skeleton\Helpers\IUserTypeHelper.cs" />
+    <Compile Include="Managers\Implementations\Managers\ManagerFactory.cs" />
+    <Compile Include="Managers\Implementations\Helpers\ProductGroupHelper.cs" />
+    <Compile Include="Managers\Implementations\Managers\ProductGroupManager.cs" />
+    <Compile Include="Managers\Implementations\Helpers\ProductHelper.cs" />
+    <Compile Include="Managers\Implementations\Managers\ProductManager.cs" />
+    <Compile Include="Managers\Implementations\Helpers\UserHelper.cs" />
+    <Compile Include="Managers\Implementations\Managers\UserManager.cs" />
+    <Compile Include="Managers\Implementations\Managers\UserTypeHelper.cs" />
+    <Compile Include="Managers\Skeleton\Managers\IClientManager.cs" />
+    <Compile Include="Managers\Skeleton\Managers\IGenericCRUD.cs" />
+    <Compile Include="Managers\Skeleton\Managers\IManagerFactory.cs" />
+    <Compile Include="Managers\Skeleton\Helpers\IHelper.cs" />
+    <Compile Include="Managers\Skeleton\Helpers\IProductGroupHelper.cs" />
+    <Compile Include="Managers\Skeleton\Managers\IProductGroupManager.cs" />
+    <Compile Include="Managers\Skeleton\Helpers\IProductHelper.cs" />
+    <Compile Include="Managers\Skeleton\Managers\IProductManager.cs" />
+    <Compile Include="Managers\Skeleton\Helpers\IUserHelper.cs" />
+    <Compile Include="Managers\Skeleton\Managers\IUserManager.cs" />
     <Compile Include="OM\Client.cs" />
     <Compile Include="OM\ClientCompany.cs" />
     <Compile Include="OM\Product.cs" />
