Done changes related to user settings and added required tables and conditions

--- a/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
+++ b/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
@@ -48,32 +48,38 @@
     <Compile Include="ExceptionLogic.cs" />
     <Compile Include="ExceptionParameters.cs" />
     <Compile Include="GenericExtensions.cs" />
-    <Compile Include="Managers\Implementations\Helpers\HelperFactory.cs" />
-    <Compile Include="Managers\Implementations\Helpers\ClientHelper.cs" />
-    <Compile Include="Managers\Implementations\Helpers\Helper.cs" />
-    <Compile Include="Managers\Implementations\Helpers.cs" />
-    <Compile Include="Managers\Implementations\Managers\ClientManager.cs" />
-    <Compile Include="Managers\Skeleton\Helpers\IClientHelper.cs" />
-    <Compile Include="Managers\Skeleton\Helpers\IHelperFactory.cs" />
-    <Compile Include="Managers\Skeleton\Helpers\IUserTypeHelper.cs" />
-    <Compile Include="Managers\Implementations\Managers\ManagerFactory.cs" />
-    <Compile Include="Managers\Implementations\Helpers\ProductGroupHelper.cs" />
-    <Compile Include="Managers\Implementations\Managers\ProductGroupManager.cs" />
-    <Compile Include="Managers\Implementations\Helpers\ProductHelper.cs" />
-    <Compile Include="Managers\Implementations\Managers\ProductManager.cs" />
-    <Compile Include="Managers\Implementations\Helpers\UserHelper.cs" />
-    <Compile Include="Managers\Implementations\Managers\UserManager.cs" />
-    <Compile Include="Managers\Implementations\Managers\UserTypeHelper.cs" />
-    <Compile Include="Managers\Skeleton\Managers\IClientManager.cs" />
-    <Compile Include="Managers\Skeleton\Managers\IGenericCRUD.cs" />
-    <Compile Include="Managers\Skeleton\Managers\IManagerFactory.cs" />
-    <Compile Include="Managers\Skeleton\Helpers\IHelper.cs" />
-    <Compile Include="Managers\Skeleton\Helpers\IProductGroupHelper.cs" />
-    <Compile Include="Managers\Skeleton\Managers\IProductGroupManager.cs" />
-    <Compile Include="Managers\Skeleton\Helpers\IProductHelper.cs" />
-    <Compile Include="Managers\Skeleton\Managers\IProductManager.cs" />
-    <Compile Include="Managers\Skeleton\Helpers\IUserHelper.cs" />
-    <Compile Include="Managers\Skeleton\Managers\IUserManager.cs" />
+    <Compile Include="Implementations\Helpers\HelperFactory.cs" />
+    <Compile Include="Implementations\Helpers\ClientHelper.cs" />
+    <Compile Include="Implementations\Helpers\Helper.cs" />
+    <Compile Include="Implementations\Helpers.cs" />
+    <Compile Include="Implementations\Helpers\SettingHelper.cs" />
+    <Compile Include="Implementations\Managers\ClientManager.cs" />
+    <Compile Include="Implementations\Managers\SettingManager.cs" />
+    <Compile Include="OM\Setting.cs" />
+    <Compile Include="OM\UserSettings.cs" />
+    <Compile Include="Skeleton\Helpers\IClientHelper.cs" />
+    <Compile Include="Skeleton\Helpers\IHelperFactory.cs" />
+    <Compile Include="Skeleton\Helpers\ISettingHelper.cs" />
+    <Compile Include="Skeleton\Helpers\IUserTypeHelper.cs" />
+    <Compile Include="Implementations\Managers\ManagerFactory.cs" />
+    <Compile Include="Implementations\Helpers\ProductGroupHelper.cs" />
+    <Compile Include="Implementations\Managers\ProductGroupManager.cs" />
+    <Compile Include="Implementations\Helpers\ProductHelper.cs" />
+    <Compile Include="Implementations\Managers\ProductManager.cs" />
+    <Compile Include="Implementations\Helpers\UserHelper.cs" />
+    <Compile Include="Implementations\Managers\UserManager.cs" />
+    <Compile Include="Implementations\Managers\UserTypeHelper.cs" />
+    <Compile Include="Skeleton\Managers\IClientManager.cs" />
+    <Compile Include="Skeleton\Managers\IGenericCRUD.cs" />
+    <Compile Include="Skeleton\Managers\IManagerFactory.cs" />
+    <Compile Include="Skeleton\Helpers\IHelper.cs" />
+    <Compile Include="Skeleton\Helpers\IProductGroupHelper.cs" />
+    <Compile Include="Skeleton\Managers\IProductGroupManager.cs" />
+    <Compile Include="Skeleton\Helpers\IProductHelper.cs" />
+    <Compile Include="Skeleton\Managers\IProductManager.cs" />
+    <Compile Include="Skeleton\Helpers\IUserHelper.cs" />
+    <Compile Include="Skeleton\Managers\ISettingManager.cs" />
+    <Compile Include="Skeleton\Managers\IUserManager.cs" />
     <Compile Include="OM\Client.cs" />
     <Compile Include="OM\ClientCompany.cs" />
     <Compile Include="OM\Product.cs" />
