More adds related to order page functionality

--- a/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
+++ b/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
@@ -52,13 +52,26 @@
     <Compile Include="Implementations\Helpers\ClientHelper.cs" />
     <Compile Include="Implementations\Helpers\Helper.cs" />
     <Compile Include="Implementations\Helpers.cs" />
+    <Compile Include="Implementations\Helpers\OrderHelper.cs" />
+    <Compile Include="Implementations\Helpers\PartyGroupHelper.cs" />
+    <Compile Include="Implementations\Helpers\PartyHelper.cs" />
     <Compile Include="Implementations\Helpers\SettingHelper.cs" />
     <Compile Include="Implementations\Managers\ClientManager.cs" />
+    <Compile Include="Implementations\Managers\OrderManager.cs" />
+    <Compile Include="Implementations\Managers\PartyGroupManager.cs" />
+    <Compile Include="Implementations\Managers\PartyManager.cs" />
     <Compile Include="Implementations\Managers\SettingManager.cs" />
+    <Compile Include="OM\Order.cs" />
+    <Compile Include="OM\OrderDetail.cs" />
+    <Compile Include="OM\Party.cs" />
+    <Compile Include="OM\PartyGroup.cs" />
     <Compile Include="OM\Setting.cs" />
     <Compile Include="OM\UserSettings.cs" />
     <Compile Include="Skeleton\Helpers\IClientHelper.cs" />
     <Compile Include="Skeleton\Helpers\IHelperFactory.cs" />
+    <Compile Include="Skeleton\Helpers\IOrderHelper.cs" />
+    <Compile Include="Skeleton\Helpers\IPartyGroupHelper.cs" />
+    <Compile Include="Skeleton\Helpers\IPartyHelper.cs" />
     <Compile Include="Skeleton\Helpers\ISettingHelper.cs" />
     <Compile Include="Skeleton\Helpers\IUserTypeHelper.cs" />
     <Compile Include="Implementations\Managers\ManagerFactory.cs" />
@@ -74,6 +87,9 @@
     <Compile Include="Skeleton\Managers\IManagerFactory.cs" />
     <Compile Include="Skeleton\Helpers\IHelper.cs" />
     <Compile Include="Skeleton\Helpers\IProductGroupHelper.cs" />
+    <Compile Include="Skeleton\Managers\IOrderManager.cs" />
+    <Compile Include="Skeleton\Managers\IPartyGroupManager.cs" />
+    <Compile Include="Skeleton\Managers\IPartyManager.cs" />
     <Compile Include="Skeleton\Managers\IProductGroupManager.cs" />
     <Compile Include="Skeleton\Helpers\IProductHelper.cs" />
     <Compile Include="Skeleton\Managers\IProductManager.cs" />
