More changes related to sync process

--- a/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
+++ b/ExpertOrderManagement/BusinessLogic/BusinessLogic.csproj
@@ -55,16 +55,20 @@
     <Compile Include="Implementations\Helpers\OrderHelper.cs" />
     <Compile Include="Implementations\Helpers\PartyGroupHelper.cs" />
     <Compile Include="Implementations\Helpers\PartyHelper.cs" />
+    <Compile Include="Implementations\Helpers\Rate2Helper.cs" />
     <Compile Include="Implementations\Helpers\SettingHelper.cs" />
     <Compile Include="Implementations\Managers\ClientManager.cs" />
     <Compile Include="Implementations\Managers\OrderManager.cs" />
     <Compile Include="Implementations\Managers\PartyGroupManager.cs" />
     <Compile Include="Implementations\Managers\PartyManager.cs" />
     <Compile Include="Implementations\Managers\SettingManager.cs" />
+    <Compile Include="OM\Batch.cs" />
     <Compile Include="OM\Order.cs" />
     <Compile Include="OM\OrderDetail.cs" />
     <Compile Include="OM\Party.cs" />
     <Compile Include="OM\PartyGroup.cs" />
+    <Compile Include="OM\Rate.cs" />
+    <Compile Include="OM\Rate2.cs" />
     <Compile Include="OM\Setting.cs" />
     <Compile Include="OM\UserSettings.cs" />
     <Compile Include="Skeleton\Helpers\IClientHelper.cs" />
@@ -72,6 +76,7 @@
     <Compile Include="Skeleton\Helpers\IOrderHelper.cs" />
     <Compile Include="Skeleton\Helpers\IPartyGroupHelper.cs" />
     <Compile Include="Skeleton\Helpers\IPartyHelper.cs" />
+    <Compile Include="Skeleton\Helpers\IRate2Helper.cs" />
     <Compile Include="Skeleton\Helpers\ISettingHelper.cs" />
     <Compile Include="Skeleton\Helpers\IUserTypeHelper.cs" />
     <Compile Include="Implementations\Managers\ManagerFactory.cs" />
