--- a/ExpertOrderManagement/Distributor.BusinessLogic/Distributor.BusinessLogic.csproj
+++ b/ExpertOrderManagement/Distributor.BusinessLogic/Distributor.BusinessLogic.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <Reference Include="itextsharp, Version=5.5.9.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\MehulElectro\MehulIndustries\bin\itextsharp.dll</HintPath>
+      <HintPath>..\packages\iTextSharp\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
