--- a/ExpertOrderManagement/ExpertOrderManagement/ExpertOrderManagement.csproj
+++ b/ExpertOrderManagement/ExpertOrderManagement/ExpertOrderManagement.csproj
@@ -47,9 +47,9 @@
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.5.0.4\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+    <Reference Include="Ninject, Version=2.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\WINDOWS10\Downloads\Ninject-2.2.1.3-release-net-4.0-mediumTrust\Ninject.dll</HintPath>
+      <HintPath>..\packages\Ninject-2.2.1.3-release-net-4.0-mediumTrust\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
